--- a/lib/.eslintrc.json
+++ b/lib/.eslintrc.json
@@ -2,7 +2,7 @@
     "rules": {
         "indent": [
             2,
-            4
+            2
         ],
         "quotes": [
             2,
@@ -18,7 +18,8 @@
         ]
     },
     "env": {
-        "browser": true
+        "browser": true,
+        "commonjs": true
     },
     "extends": "eslint:recommended"
 }
