--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "deep-equal": "^1.0.1"
+    "deep-equal": "^1.0.1",
+    "function-params": "^0.1.0"
   },
   "devDependencies": {
     "eslint": "^2.2.0",
